<resources>
    <string name="app_name">OpenLaserTag</string>
    <string name="action_settings">Settings</string>
    <string name="manage_users_menu_titel">Manage users</string>
    <string name="title_activity_settings">Settings</string>
    <string name="load_file_menu_titel">Load game file</string>

    <!-- Strings related to Settings -->
    <string name="start_game_countdown_description">Countdown before game starts</string>
    <string name="start_game_countdown_dialog_title">Countdown Duration</string>
    <string name="game_wake_lock_title">Game Wake Lock</string>
    <string name="game_wake_lock_summary">Keep display on during game</string>
    <string name="Game_Sound_on">Game Sounds</string>
    <string name="play_sounds_during_game">Play sounds during game</string>
    <string name="theme_preference_title">App Theme</string>

    <!-- Game Activity -->
    <string name="ExitGame">Exit Game</string>
    <string name="NameDoublePoint">Name:</string>
    <string name="TeamDoublePoint">Team:</string>
    <string name="GameDoublePoint">Game:</string>
    <string name="WeaponDoublePoint">Weapon:</string>
    <string name="Life">Life</string>
    <string name="Shield">Shield</string>
    <string name="Ammo">Ammo</string>
    <string name="ExtraLifesDoublePoint">Extra Lifes:</string>
    <string name="AmmoPacksDoublePoint">Ammo Packs:</string>
    <string name="GameOver">Game Over</string>
    <string name="GameStats">Game Stats:</string>
    <string name="GameStatsValue">End Value:</string>

    <!-- Manage users -->
    <string name="NewUsername">New Username</string>
    <string name="Useralias">User alias</string>
    <string name="ButtonMinus">-</string>
    <string name="ButtonPlus">+</string>
    <string name="AliasDoublePoint">Alias:</string>
    <string name="PlayedGamesDoublePoint">Played Games:</string>
    <string name="EnterNewUserDetails">Please enter the users details.</string>
    <string name="CannotRemoveLastUser">Cannot remove! One user is obligatory.</string>

    <!-- BT config -->
    <string name="DeviceNName">Device\nName</string>
    <string name="PIN">PIN</string>
    <string name="UUID">UUID</string>

    <!-- BT Dialog -->
    <string name="AdressDoublePoint">Adress:</string>

    <!-- Init Game -->
    <string name="StartGame">Start Game</string>
    <string name="JoinTeam">Join Team</string>
    <string name="PlayerID">PlayerID</string>
    <string name="DescriptionDoublePoint">Description:</string>
    <string name="NoDescription">No Description</string>
    <string name="PlayerNameDoublePoint">Player Name:</string>
    <string name="DurationDoublePoint">Duration:</string>
    
    <!-- Main Activity -->
    <string name="CurrentNUserDoublePoint">Current\nUser:</string>
    <string name="Connect">Connect</string>
    <string name="Disconnect">Disconnect</string>
    <string name="NotConnected">Not connected to Tagger</string>
    <string name="ConnectedtoTagger">Connected to Tagger</string>
    <string name="PairTaggerFirst">Pair Tagger first</string>
    <string name="RememberChoiceOfDevice">Remember choice of device</string>
    <string name="LoadGame">Load Game</string>
    <string name="TaggerConfig">Tagger Config</string>
    <string name="EnterNewUsername">Please enter new Username.</string>
    <string name="BluetoothNotSupported">Bluetooth not supported!</string>

    <!-- Tagger Config -->
    <string name="ReceiverConfig">Receiver Config</string>
    <string name="ReceiverNConfig">Receiver\nConfig</string>
    <string name="BluetoothNConfig">Bluetooth\nConfig</string>
    <string name="IRConfig">IR Config</string>

    <!-- Stats Detail -->
    <string name="StatsDoublePoint">Stats:</string>
    <string name="OverallDoublePoint">Overall:</string>
    <string name="InViewDoublePoint">InView:</string>
    <string name="TotalDoublePoint">Total:</string>
    <string name="AverageDoublePoint">Average:</string>
    <string name="BinningNLength">Binning\nLength</string>
    <string name="Zoom">Zoom</string>
    <string name="_Games">\ Games</string>
    <string name="StatAverageUnit">/min</string>

    <!-- Game config -->
    <string name="AddWeapon">Add new Weapon</string>
    <string name="TeamNameDoublePoint">Team Name:</string>
    <string name="ColorDoublePoint">Color:</string>
    <string name="TicksDoublePoint">Ticks:</string>
    <string name="FrequencyDoublePoint">Frequency:</string>
    <string name="FrequencyUnit">Hz</string>
    <string name="RangeDoublePoint">Range:</string>
    <string name="DamageSignDoublePoint">Damage Sign:</string>
    <string name="Allowed">Allowed\t\t</string>
    <string name="allowed">allowed</string>
    <string name="notallowed">not allowed</string>
    <string name="DamageDoublePoint">Damage:</string>
    <string name="GeneralDoublePoint">General:</string>
    <string name="GameDuration">Game Duration</string>
    <string name="WeaponsDoublePoint">Weapons:</string>
    <string name="TeamsDoublePoint">Teams:</string>
    <string name="TimerDoublePoint">Timer:</string>
    <string name="VariablesDoublePoint">Variables:</string>
    <string name="AddNewTeam">Add new Team</string>
    <string name="ChooseTimeValue">Choose time value</string>
    <string name="EditTeamInfo">Edit Team Information</string>
    <string name="EditWeaponInfo">Edit Weapon Information</string>
    <string name="EditTimerInfo">Edit Timer Information</string>
    <string name="NewVariableValue">Type in a new variable value</string>
    <string name="NoValidValueMessage">No valid input given. Valid values are \'true\' or \'false\', case-insensitive</string>
    <string name="DefaultTeamName">Team Name</string>
    <string name="DefaultWeaponName">Weapon Name</string>
    <string name="SaveGameToFile">Save Game to File</string>
    <string name="OverwriteIfFileAlreadyExists">Overwrite if file already exists?</string>
    <string name="TeamColor">Team Color</string>

    <!-- IR Config -->
    <string name="StartPulse">Start Pulse</string>
    <string name="OnePulse">\'1\'-Pulse</string>
    <string name="ZeroPulse">\'0\'-Pulse</string>
    <string name="PulsePause">Pulse Pause</string>
    <string name="DurationTolerance">Duration Tolerance</string>
    <string name="IRConfigUnit">us</string>
    <string name="SendToTagger">Send to Tagger</string>
    <string name="SetToDefaultValues">Set to default values</string>

    <!-- Receiver Config -->
    <string name="Front">Front</string>
    <string name="Back">Back</string>
    <string name="NoReceiverListFromTaggerAvailableWarning">No receiver list from tagger existing. Using standard configuration.</string>
    <string name="NoUnusedReceiverLeft">No unused receivers left on the tagger. Please connect new receivers.</string>
    <string name="NoUnusedPositionLeft">No unused position on player left. Cannot add new receiver.</string>

    <!-- Load Game Fragment -->
    <string name="PredefinedGames">Predefined Games</string>
    <string name="SelectXMLGameFile">Select XML Game File</string>

    <!-- Activity titles -->
    <string name="title_activity_load_game">Load Game</string>
    <string name="title_activity_manage_users">Manage Users</string>
    <string name="title_activity_tagger_config">Tagger Config</string>
    <string name="title_activity_game_config">Edit: </string>
    <string name="title_activity_stats">Player Stats:</string>
    <string name="title_activity_init_game">Init Game</string>
</resources>
