<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/game_config_weapon_dialog_name_layout">
        <TextView
            android:text="@string/NameDoublePoint"
            android:textSize="23sp"
            android:textColor="?colorTextPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:text="WeaponName"
            android:textSize="23sp"
            android:textColor="?colorTextPrimary"
            android:textAlignment="center"
            android:inputType="textNoSuggestions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/game_config_weapon_dialog_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/game_config_weapon_dialog_frequency_layout">
        <TextView
            android:text="@string/FrequencyDoublePoint"
            android:textSize="23sp"
            android:textColor="?colorTextPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:text="0.5"
            android:textSize="23sp"
            android:textColor="?colorTextPrimary"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/game_config_weapon_dialog_frequency"
            android:layout_weight="1" />

            <TextView
                android:text="@string/FrequencyUnit"
                android:textColor="?colorTextPrimary"
                android:textSize="23sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/DamageSignDoublePoint"
            android:textSize="23sp"
            android:textColor="?colorTextPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/game_config_weapon_dialog_damagesign">
            <RadioButton
                android:text="+"
                android:textSize="23sp"
                android:textColor="?colorTextPrimary"
                android:checked="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/game_config_weapon_dialog_damagesign_plus"/>
            <RadioButton
                android:text="-"
                android:textSize="23sp"
                android:textColor="?colorTextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/game_config_weapon_dialog_damagesign_minus"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/RangeDoublePoint"
            android:textSize="23sp"
            android:textColor="?colorTextPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:text="1"
            android:textSize="23sp"
            android:textAlignment="center"
            android:textColor="?colorTextPrimary"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/game_config_weapon_dialog_range"/>
    </LinearLayout>

    <Switch
        android:text="@string/Allowed"
        android:textSize="23sp"
        android:textColor="?colorTextPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/game_config_weapon_dialog_allowed" />


</LinearLayout>