<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?colorItemDivider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="StatName"
            android:textSize="25sp"
            android:textColor="?colorTextPrimary"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/stats_list_item_name"/>
        <TextView
            android:text="10"
            android:textSize="20sp"
            android:textColor="?colorTextSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stats_list_item_games"/>
        <TextView
            android:text="@string/_Games"
            android:textColor="?colorTextSecondary"
            android:textSize="20sp"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/TotalDoublePoint"
            android:textSize="23sp"
            android:textColor="?colorTextSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="20"
            android:textSize="23sp"
            android:textColor="?colorTextSecondary"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/stats_list_item_total"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/AverageDoublePoint"
            android:textSize="23sp"
            android:textColor="?colorTextSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="2"
            android:textSize="23sp"
            android:textAlignment="center"
            android:textColor="?colorTextSecondary"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/stats_list_item_average"/>
        <TextView
            android:text="@string/StatAverageUnit"
            android:textSize="23sp"
            android:textColor="?colorTextSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stats_list_item_average_unit"/>
    </LinearLayout>

</LinearLayout>