<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_open_laser_tag_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.c_ebberg.openlasertag.OpenLaserTagMain"
    tools:showIn="@layout/activity_open_laser_tag_main"
    android:background="?colorBackground1"
    style="@style/Widget.AppCompat.Button.Colored">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/current_user_layout">

        <TextView
            android:text="@string/CurrentNUserDoublePoint"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="?colorTextSecondary"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:id="@+id/current_user_label"
            />
        <ImageButton
            app:srcCompat="@drawable/ic_sync_black_24dp"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:background="?colorBackground1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:id="@+id/current_user_change_button"/>
        <ImageButton
            app:srcCompat="@drawable/ic_stats_icon"
            android:paddingBottom="0dp"
            android:paddingEnd="0dp"
            android:paddingTop="0dp"
            android:paddingStart="0dp"
            android:background="?colorBackground1"
            android:scaleType="fitCenter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toLeftOf="@id/current_user_change_button"
            android:layout_toStartOf="@id/current_user_change_button"
            android:layout_centerVertical="true"
            android:id="@+id/current_user_stats_button"/>

        <TextView
            android:text="Username"
            android:textSize="23sp"
            android:textAlignment="center"
            android:textColor="?colorTextSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/current_user_label"
            android:layout_toEndOf="@id/current_user_label"
            android:layout_toLeftOf="@id/current_user_stats_button"
            android:layout_toStartOf="@id/current_user_stats_button"
            android:layout_centerVertical="true"
            android:id="@+id/current_user_name_text"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?colorBackgroundAccent"
        android:id="@+id/bt_layout">

        <Button
            android:text="@string/Connect"
            android:textSize="17sp"
            android:textColor="?colorTextPrimary"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/connect_Button"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"/>

        <TextView
            android:text="@string/NotConnected"
            android:textColor="?colorTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_connect_textView"
            android:textSize="24sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@id/connect_Button"
            android:layout_toStartOf="@id/connect_Button"
            />

        <CheckBox
            android:text="@string/RememberChoiceOfDevice"
            android:textSize="19sp"
            android:textColor="?colorTextPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_connect_textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/connect_Button"
            android:layout_toStartOf="@id/connect_Button"
            android:id="@+id/bt_remember_checkbox" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:layout_above="@id/bt_layout"
        android:layout_below="@id/current_user_layout">

        <Button
            android:text="@string/LoadGame"
            android:textSize="26sp"
            android:textColor="?colorTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/load_game_button"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:paddingTop="23dp"
            android:paddingBottom="23dp"/>

        <Button
            android:text="@string/TaggerConfig"
            android:textSize="26sp"
            android:textColor="?colorTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tagger_config_button"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingTop="23dp"
            android:paddingBottom="23dp"/>

        <Button
            android:text="@string/action_settings"
            android:textSize="26sp"
            android:textColor="?colorTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_button"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:paddingTop="23dp"
            android:paddingBottom="23dp"/>
    </RelativeLayout>

</RelativeLayout>
